# mattrizzo_devops

./: .gitignore  .mdl_ruleset.rb  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  bootstrap.sh  dependencies.txt  pyproject.toml  pyproject.toml.example
hooks/: __init__.py  setup_hooks.sh
hooks/pre_commit/: .pre-commit-config.yaml  README.md  __init__.py
hooks/pre_push/: README.md  check_rust.py  constants.py  pre-push.sh  pre_push_utils.py  run_mypy.py
quality_of_life_scripts/: generate_md_toc.bash
